showメソッド処理追記

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,4 @@
-<h1>ハローワールド</h1>
+<h1>index.html</h1>
 <% @articles.each do |article| %>
   <div><%= "title: #{article.title}" %></div>
   <div><%= "content: #{article.content}" %></div>
