--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,5 @@
-<h1>index.html</h1>
+<h1>Articles</h1>
 <% @articles.each do |article| %>
-  <div><%= "title: #{article.title}" %></div>
-  <div><%= "content: #{article.content}" %></div>
+  <div><%= "#{article.title}" %></div>
+  <div><%= "#{article.content}" %></div>
 <% end %>
