--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,4 @@
 <h1>show.html</h1>
-  <div><%= @article.title %></div>
-  <div><%= "content: #{@article.content}" %></div>
+
+  <p><span>タイトル：</span><%= @article.title %></p>
+  <p><span>内容：</span><%= @article.content %></p>
