--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,5 @@
 <h1>index.html</h1>
+<%= link_to '作成', "/articles/new" %>
 
 <% @articles.each do |article| %>
   <p><span>タイトル：</span><%= article.title %></p>
