--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,10 +1,16 @@
-<h1>index.html</h1>
-<%= link_to '作成', "/articles/new" %>
+<h1>マイページ</h1>
+<%= link_to '記事作成', "/articles/new" %>
 
-<% @articles.each do |article| %>
-  <p><span>タイトル：</span><%= article.title %></p>
-  <p><span>内容：</span><%= article.content %></p>
-
-<%= link_to '詳細へ', "/articles/#{article.id}" %>
-
-<% end %>
+<table>
+  <tr>
+    <th>タイトル</th>
+    <th>内容</th>
+  </tr>
+  <% @articles.each do |article| %>
+  <tr>
+  <td><%= article.title %></td>
+  <td><%= article.content %></td>
+  <td><%= link_to '詳細へ', "/articles/#{article.id}" %></td>
+  </tr>
+  <% end %>
+</table>
