--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,7 +1,9 @@
-<h1>new.html</h1>
-<h3>投稿する</h3>
+<h1>記事作成</h1>
 <%= form_with(model: @article, local: true) do |article| %>
+<h3>タイトル</h3>
 <p><%= article.text_field :title, placeholder: "タイトル" %></p>
-<p><%= article.text_field :content, placeholder: "テキスト" %></p>
-<p><%= article.submit value="投稿" %></p>
+<h3>本文</h3>
+<p><%= article.text_field :content, placeholder: "本文" %></p>
+<p><%= article.submit value="保存" %></p>
 <% end %>
+<td><%= link_to '一覧', "/" %></td>
