編集処理：editアクション処理追加 ・paramsから対象の記事データのidを取得 記事一覧：リンク修正 ・詳細リンク修正 記事作成：リンク修正・追加 ・一覧リンク修正 ・詳細リンク追記 記事詳細：リンク追加 ・一覧リンク追記 ・編集リンク追記

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,7 +10,7 @@
   <tr>
   <td><%= article.title %></td>
   <td><%= article.content %></td>
-  <td><%= link_to '詳細へ', "/articles/#{article.id}" %></td>
+  <td><%= link_to '詳細', "/articles/#{article.id}" %></td>
   </tr>
   <% end %>
 </table>
