--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,8 @@
-<h1>show.html</h1>
-  <p><span>タイトル：</span><%= @article.title %></p>
-  <p><span>内容：</span><%= @article.content %></p>
+<p><%= @article.title %></p>
+<p><%= @article.content %></p>
+<table>
+<tr>
+  <td><%= link_to '編集', "/articles/#{@article.id}/edit" %></td>
+  <td><%= link_to '一覧', "/" %></td>
+  </tr>
+</table>
