記事の編集機能の実装 ・editアクション ・updateアクション 　updateメソッドの実装 　if文によるリダイレクトパスの指定 　フラッシュメッセージ表示処理の実装

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,6 +11,7 @@
   <td><%= article.title %></td>
   <td><%= article.content %></td>
   <td><%= link_to '詳細', "/articles/#{article.id}" %></td>
+    <td><%= link_to '編集', "/articles/#{article.id}/edit" %></td>
   </tr>
   <% end %>
 </table>
