記事を削除する機能 ・destroyアクション記載 ・deleteメソッド処理 ・リダイレクトメッセージ表示

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -12,6 +12,7 @@
   <td><%= article.content %></td>
   <td><%= link_to '詳細', "/articles/#{article.id}" %></td>
     <td><%= link_to '編集', "/articles/#{article.id}/edit" %></td>
+    <td><%= button_to '削除', article ,method: :delete %>
   </tr>
   <% end %>
 </table>
