railsの日本語化 ・デフォルトを日本語に設定 ・時刻の日本時刻化
・表示メッセージの日本語化
　CRUD処理各種フラッシュメッセージの日本語化
　flash[:*]

BootStrap　 5.1.3の導入
・インストール
yarn add bootstrap@next

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,13 @@
 <h1>マイページ</h1>
+<p><%= flash[:success] %></p>
+<p><%= flash[:alert] %></p>
+<%= flash[:notice] %>
+<%
+=begin%>
+ <% @article.errors %>
+<%
+=end%>
 <%= link_to '記事作成', "/articles/new" %>
-
 <table>
   <tr>
     <th>タイトル</th>
