--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,5 @@
-<h1>マイページ</h1>
+<p id="notice"><%= notice %></p>
+<h1>記事</h1>
 <p><%= flash[:success] %></p>
 <p><%= flash[:alert] %></p>
 <%= flash[:notice] %>
@@ -7,19 +8,25 @@
  <% @article.errors %>
 <%
 =end%>
-<%= link_to '記事作成', "/articles/new" %>
-<table>
-  <tr>
-    <th>タイトル</th>
-    <th>内容</th>
-  </tr>
+<%= link_to '記事作成', "/articles/new", class: "btn btn-info" %>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">タイトル</th>
+      <th scope="col">内容</th>
+    </tr>
+  </thead>
+    <tbody>
   <% @articles.each do |article| %>
   <tr>
-  <td><%= article.title %></td>
-  <td><%= article.content %></td>
-  <td><%= link_to '詳細', "/articles/#{article.id}" %></td>
-    <td><%= link_to '編集', "/articles/#{article.id}/edit" %></td>
-    <td><%= button_to '削除', article ,method: :delete %>
+    <td><%= article.title %></td>
+    <td><%= article.content %></td>
+    <td class="hstack gap-3">
+      <%= link_to '詳細', "/articles/#{article.id}", class: "btn btn-success mr-1" %>
+      <%= link_to '編集', "/articles/#{article.id}/edit", class: "btn btn-warning" %>
+      <%= button_to '削除', article , class: "btn btn-danger", method: :delete %>
+    </td>
   </tr>
   <% end %>
+  </tbody>
 </table>
