--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,9 +1,11 @@
-<p><%= @article.title %></p>
-<p><%= @article.content %></p>
+<div class="card">
+  <div class="card-header">
+    <%= @article.title %>
+  </div>
+  <div class="card-body">
+    <%= @article.content %>
+  </div>
+</div>
 <%= flash[:notice] %>
-<table>
-<tr>
-  <td><%= link_to '編集', "/articles/#{@article.id}/edit" %></td>
-  <td><%= link_to '一覧', "/" %></td>
-  </tr>
-</table>
+<%= link_to '編集', "/articles/#{@article.id}/edit"  class: "btn btn-warning" %>
+<%= link_to '一覧', "/" class: "btn btn-secondary" %>
