--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,16 +1,17 @@
 <nav class="navbar navbar-expand-sm navbar-light bg-light">
   <div class="container-fluid">
-    <------TOPへのリンク設置------->
+    <!------TOPへのリンク設置------->
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
           <li class="nav-item">
-            <------認証の各ボタン設置------->
+            <!------認証の各ボタン設置------->
           </li>
           <li class="nav-item">
-            <------認証の各ボタン設置------->
+            <!------認証の各ボタン設置------->
           </li>
           <li class="nav-item">
-            <------認証の各ボタン設置------->
+            <!------認証の各ボタン設置------->
+             <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
           </li>
       </ul>
     </div>
